--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ img {
   text-decoration: none;
 }
 
-.features, .team, .social, .client, .portfolio-list {
+.features, .services, .team, .social, .client, .portfolio-list {
   padding: 0;
   margin: 0;
   list-style: none;
@@ -132,6 +132,19 @@ img {
   background-size: cover;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+  }
+}
+
 .hero-title {
   margin-top: 0;
   margin-bottom: 30px;
@@ -141,6 +154,13 @@ img {
   line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .section {
@@ -163,6 +183,23 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .features {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
 .features .features-title {
   margin-top: 0;
   color: #212121;
@@ -173,13 +210,49 @@ img {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .features .features-title {
+    text-align: left;
+  }
+}
+
 .features .item {
   width: 450px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features .item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features .item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 @media screen and (max-width: 767px) {
   .features .item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features .item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features .item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features .item:nth-child(2n + 1) {
+    margin-right: 30px;
   }
 }
 
@@ -197,10 +270,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 450px;
   height: 120px;
   margin-bottom: 30px;
-  background: #f5f4fa;
+  background-color: #f5f4fa;
   border-radius: 4px;
 }
 
@@ -210,9 +282,67 @@ img {
   height: 70px;
 }
 
+.services {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 @media screen and (max-width: 1199px) {
   .services {
     display: none;
+  }
+}
+
+.services .item {
+  width: 370px;
+  margin-right: 30px;
+}
+
+.services .item:last-child {
+  margin-right: 0;
+}
+
+.services .services-title {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  bottom: 0;
+  margin: 0;
+  width: 370px;
+  height: 70px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #FFFFFF;
+  background-color: rgba(47, 48, 58, 0.8);
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.services .services-position {
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
 }
 
@@ -224,9 +354,33 @@ img {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team .item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+
 @media screen and (max-width: 767px) {
   .team .item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team .item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team .item:nth-child(-n + 2) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team .item:nth-child(2n + 1) {
+    margin-right: 30px;
   }
 }
 
@@ -490,13 +644,41 @@ img {
   color: #FFFFFF;
 }
 
+.button {
+  margin: 0;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 200px;
+  color: #FFFFFF;
+  background-color: #2196F3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  text-align: center;
+  -webkit-transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button:hover, .button:focus {
+  background: #188ce8;
+}
+
 /* button */
 .section-btn {
-  margin-bottom: 50px;
-  text-align: center;
+  margin-bottom: 40px;
+  text-align: left;
+}
+
+@media screen and (min-width: 768px) {
+  .section-btn {
+    text-align: center;
+  }
 }
 
 .section-btn .btn {
+  margin-right: 8px;
   padding: 6px 22px;
   border: none;
   color: #212121;
@@ -511,6 +693,12 @@ img {
   border-radius: 4px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .section-btn .btn {
+    margin-bottom: 15px;
+  }
 }
 
 .section-btn .btn:not(:last-child) {
@@ -576,26 +764,54 @@ img {
 }
 
 .portfolio-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   color: #212121;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .portfolio-list .item {
-  width: 370px;
-  margin-right: 30px;
   margin-bottom: 30px;
+  width: 450px;
 }
 
-.portfolio-list .item:nth-child(3n) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-list .item {
+    width: calc((100% - 30px) / 2);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list .item {
+    width: calc((100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+.portfolio-list .item:last-child {
   margin-right: 0;
+  margin-bottom: 0;
 }
 
-.portfolio-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-list .item:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-list .item:nth-child(3n) {
+    margin-right: 0;
+  }
 }
 
 .portfolio-list .link-decoration:hover,
@@ -612,6 +828,7 @@ img {
 
 .portfolio-overlay {
   position: relative;
+  overflow: hidden;
 }
 
 .portfolio-desc {
