--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,6 +1,12 @@
 .features {
   @extend %list;
-  //   display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 
   .features-title {
     margin-top: 0;
@@ -10,15 +16,39 @@
     margin-bottom: 10px;
     text-transform: uppercase;
     text-align: center;
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
   }
+
   .item {
     width: 450px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 90px) / 4);
+    }
   }
   .item:not(:last-child) {
     @media screen and (max-width: 767px) {
       margin-bottom: 30px;
     }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
   }
+  .item:nth-child(-n + 2) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-bottom: 30px;
+    }
+  }
+  .item:nth-child(2n + 1) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-right: 30px;
+    }
+  }
+
   .text {
     margin: 0;
   }
@@ -26,10 +56,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 450px;
     height: 120px;
     margin-bottom: 30px;
-    background: #f5f4fa;
+    background-color: #f5f4fa;
     border-radius: 4px;
   }
   .features-icon {
