--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,6 +6,15 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 480px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    height: 600px;
+  }
+
   height: 400px;
   background-image: linear-gradient(
       to right,
@@ -26,6 +35,12 @@
   font-weight: 900;
   font-size: 26px;
   line-height: 1.62;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
