--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -1,8 +1,16 @@
 /* button */
 .section-btn {
-  margin-bottom: 50px;
-  text-align: center;
+  margin-bottom: 40px;
+  text-align: left;
+  @media screen and (min-width: 768px) {
+    text-align: center;
+  }
+
   .btn {
+    margin-right: 8px;
+    @media screen and (max-width: 767px) {
+      margin-bottom: 15px;
+    }
     padding: 6px 22px;
     border: none;
     color: $title-text-color;
@@ -72,21 +80,40 @@
 
 .portfolio-list {
   @extend %list;
-  display: flex;
-  flex-wrap: wrap;
-
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
   color: $title-text-color;
 
   .item {
-    width: 370px;
-    margin-right: 30px;
+    // @media screen and (max-width: 767px)
     margin-bottom: 30px;
+    width: 450px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+      margin-right: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 60px) / 3);
+      margin-right: 30px;
+      margin-bottom: 30px;
+    }
+  }
+  .item:last-child {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+  .item:nth-child(2n) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-right: 0;
+    }
   }
   .item:nth-child(3n) {
-    margin-right: 0;
-  }
-  .item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+    @media screen and (min-width: 1200px) {
+      margin-right: 0;
+    }
   }
 
   .link-decoration:hover,
@@ -103,6 +130,7 @@
 
 .portfolio-overlay {
   position: relative;
+  overflow: hidden;
 }
 
 .portfolio-desc {
