--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,6 +1,12 @@
 .team {
   @extend %list;
-  //   display: flex;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 
   .item {
     width: 450px;
@@ -8,12 +14,30 @@
       0px 1px 3px rgba(0, 0, 0, 0.12);
     background-color: $background-text-color;
     text-align: center;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+    }
   }
   .item:not(:last-child) {
     @media screen and (max-width: 767px) {
       margin-bottom: 30px;
     }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
   }
+  .item:nth-child(-n + 2) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-bottom: 30px;
+    }
+  }
+  .item:nth-child(2n + 1) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-right: 30px;
+    }
+  }
+
   .team-image {
     margin-top: 0;
     margin-bottom: 30px;
