--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -20,3 +20,24 @@
     background: #188ce8;
   }
 }
+
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+
+  .icon-close {
+    display: none;
+  }
+  &.is-open .icon-menu {
+    display: none;
+  }
+  &.is-open .icon-close {
+    display: block;
+  }
+}
