--- a/sass/components/_heder.scss
+++ b/sass/components/_heder.scss
@@ -1,8 +1,16 @@
 .page-header {
-  // display: flex;
-  // align-items: center;
-  min-height: 60px;
+  @media screen and (max-width: 767px) {
+    position: relative;
+  }
 }
+
 .heder {
+  display: flex;
+  align-items: center;
   background-color: $background-text-color;
+  min-height: 60px;
+  border: 1px solid #ececec;
+  @media screen and (min-width: 768px) {
+    min-height: 80px;
+  }
 }
