--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,12 +1,17 @@
 .logo-black {
   @extend %logo;
   color: $title-text-color;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-right: 81px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 85px;
+  }
 }
 .logo-white {
   @extend %logo;
-  display: block;
+  display: inline-block;
   margin-bottom: 20px;
-  text-align: center;
   color: $background-text-color;
 }
 .accent {
