--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,6 +1,11 @@
 .form {
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
+
   background-color: $background-text-color;
   padding: 40px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -31,6 +36,8 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms $timing-function;
+  overflow-y: scroll;
+
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
@@ -64,7 +71,11 @@
 
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
+
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
   text-align: center;
   letter-spacing: 0.03em;
 }
@@ -77,6 +88,9 @@
   position: absolute;
   top: 50%;
   left: 42px;
+
+  @media screen and (min-width: 1200px) {
+  }
   transform: translateY(-50%);
   font-weight: 400;
   font-size: 14px;
@@ -85,6 +99,11 @@
 
   color: $primary-text-color;
   transition: transform 250ms $timing-function, color 250ms $timing-function;
+  &.checkbox {
+    @media screen and (max-width: 1199px) {
+      left: 25px;
+    }
+  }
 }
 .form-label.coment {
   top: 12px;
@@ -135,7 +154,9 @@
 
 .checkbox-icon {
   position: relative;
-  right: -19px;
+  @media screen and (min-width: 1200px) {
+    right: -19px;
+  }
   width: 15px;
   height: 15px;
   margin-right: 8px;
@@ -153,8 +174,12 @@
   background-origin: border-box;
 }
 .checkbox .form-label {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
   letter-spacing: 0.03em;
 }
 .contract-link {
