--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,52 +1,115 @@
-// .main-nav {
-//   display: flex;
-//   align-items: center;
-//  }
-// .site-nav {
-//     @extend %list;
-//    display: flex;
-//    margin-left: 85px;
-//    .item:not(:last-child) {
-//     margin-right: 50px;
-//  }
-// }
-// .site-nav .link {
-//     display: block;
-//     padding-top: 32px;
-//     padding-bottom: 32px;
+.main-nav {
+  align-items: center;
 
-//     color: $title-text-color;
-//     font-style: normal;
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     text-decoration: none;
+  @media screen and (max-width: 767px) {
+    .mobi-container {
+      display: flex;
+      padding-top: 16px;
+      padding-bottom: 16px;
+      justify-content: space-between;
+    }
+  }
 
-//     transition: color 250ms $timing-function;
-//     &:hover,
-//     &:focus {
-//         color: $accent-color;
-//     }
-//     &.current {
-//         color: $accent-color;
-//     }
-// }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+.menu-container {
+  align-items: center;
 
-// .link {
-//     &.current {
-//         position: relative;
-//       }
-//     &.current::after {
-//         position: absolute;
-//         content: '';
+  @media screen and (max-width: 767px) {
+    position: absolute;
+    display: none;
 
-//         left: 0;
-//         bottom: 0;
-//         display: block;
-//         width: 100%;
-//         height: 5px;
-//         border-radius: 2px;
-//         background-color: $accent-color;
-//       }
-// }
+    top: 100%;
+    left: 0;
+    width: 100%;
+
+    height: 393px;
+
+    background-color: $background-text-color;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08),
+      0px 4px 8px rgba(0, 0, 0, 0.04);
+
+    &.is-open {
+      display: block;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+}
+
+.site-nav {
+  @extend %list;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
+
+  .item:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 40px;
+    }
+    @media screen and (min-width: 768px) {
+      margin-right: 50px;
+    }
+  }
+}
+.site-nav .link {
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  color: $title-text-color;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.16;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+
+  letter-spacing: 0.02em;
+  text-decoration: none;
+
+  transition: color 250ms $timing-function;
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+  &.current {
+    color: $accent-color;
+  }
+}
+
+.link {
+  &.current {
+    position: relative;
+  }
+  &.current::after {
+    position: absolute;
+    content: "";
+
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 5px;
+    border-radius: 2px;
+    background-color: $accent-color;
+  }
+}
