--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -15,6 +15,9 @@ body {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  &.modal-open {
+    overflow: hidden;
+  }
 }
 img {
   display: block;
@@ -31,6 +34,10 @@ img {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  // @media screen and (min-width: 768px) and (max-width: 1199px) {
+  //   padding-bottom: 18px;
+  //   padding-top: 18px;
+  // }
 
   @media screen and (min-width: 480px) {
     width: 480px;
