--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -3,6 +3,11 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 1.6;
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.9;
+  }
+
   text-decoration: none;
 }
 
