--- a/css/main.css
+++ b/css/main.css
@@ -76,12 +76,6 @@ img {
   text-decoration: none;
 }
 
-@media screen and (max-width: 767px) {
-  .page-header {
-    position: relative;
-  }
-}
-
 .heder {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -91,12 +85,21 @@ img {
           align-items: center;
   background-color: #FFFFFF;
   min-height: 60px;
-  border: 1px solid #ececec;
 }
 
 @media screen and (min-width: 768px) {
   .heder {
     min-height: 80px;
+  }
+}
+
+.heder.heder-portfolio {
+  border: 1px solid #ececec;
+}
+
+@media screen and (max-width: 767px) {
+  .page-header {
+    position: relative;
   }
 }
 
@@ -364,17 +367,31 @@ img {
   margin-right: auto;
   max-width: 480px;
   height: 400px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/Header.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/Header.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/header-mobi.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/header-mobi.jpg");
   background-color: #757575;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero .box {
+    background-image: url("header-mobi@2x.jpg");
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero {
     max-width: 768px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/header-table.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/header-table.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
+  .hero .box {
+    background-image: url("header-table@2x.jpg");
   }
 }
 
@@ -382,6 +399,14 @@ img {
   .hero {
     max-width: 1600px;
     height: 600px;
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/header.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/header.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero .box {
+    background-image: url("header@2x.jpg");
   }
 }
 
@@ -627,6 +652,18 @@ img {
 .team .team-image {
   margin-top: 0;
   margin-bottom: 30px;
+  width: 100%;
+  height: 320px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+}
+
+@media screen and (min-width: 768px) {
+  .team .team-image {
+    height: 260px;
+  }
 }
 
 .team .team-name {
