--- a/sass/components/_heder.scss
+++ b/sass/components/_heder.scss
@@ -1,16 +1,21 @@
+.heder {
+  display: flex;
+  align-items: center;
+  background-color: $background-text-color;
+  min-height: 60px;
+  @media screen and (min-width: 768px) {
+    min-height: 80px;
+  }
+  &.heder-portfolio {
+  border: 1px solid #ececec;
+
+  }
+}
+
 .page-header {
   @media screen and (max-width: 767px) {
     position: relative;
   }
 }
 
-.heder {
-  display: flex;
-  align-items: center;
-  background-color: $background-text-color;
-  min-height: 60px;
-  border: 1px solid #ececec;
-  @media screen and (min-width: 768px) {
-    min-height: 80px;
-  }
-}
+
