--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -51,6 +51,7 @@
 }
 
 .address-footer {
+  font-style: normal;
   color: $background-text-color;
   @media screen and (max-width: 767px) {
     margin-bottom: 60px;
