--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ img {
   font-family: raleway, sans-serif;
   font-weight: 700;
   font-size: 24px;
-  line-height: 1.6;
+  line-height: 1.16;
   text-decoration: none;
 }
 
@@ -291,7 +291,7 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
-    margin-left: 81px;
+    margin-left: 79px;
   }
 }
 
@@ -307,6 +307,12 @@ img {
 @media screen and (max-width: 767px) {
   .contacts .item:not(:last-child) {
     margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts .item:not(:last-child) {
+    margin-bottom: 10px;
   }
 }
 
@@ -433,6 +439,16 @@ img {
   padding-bottom: 60px;
 }
 
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .section.services-none {
+    padding-top: 0;
+  }
+}
+
 .section .section-title {
   margin-top: 0;
   margin-bottom: 30px;
@@ -442,9 +458,9 @@ img {
   text-align: center;
 }
 
-@media screen and (max-width: 1199px) {
-  .section .section-title.title-hidden {
-    display: none;
+@media screen and (min-width: 1200px) {
+  .section .section-title {
+    margin-bottom: 50px;
   }
 }
 
@@ -891,6 +907,7 @@ img {
 }
 
 .address-footer {
+  font-style: normal;
   color: #FFFFFF;
 }
 
@@ -1076,6 +1093,18 @@ img {
   text-align: left;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .section-btn {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-btn {
+    margin-bottom: 50px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .section-btn {
     text-align: center;
@@ -1083,7 +1112,7 @@ img {
 }
 
 .section-btn .btn {
-  margin-right: 8px;
+  margin: 0;
   padding: 6px 22px;
   border: none;
   color: #212121;
@@ -1100,14 +1129,20 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.section-btn .btn:not(:last-child) {
+  margin-right: 8px;
+}
+
 @media screen and (max-width: 767px) {
-  .section-btn .btn {
+  .section-btn .btn:nth-child(-n + 3) {
     margin-bottom: 15px;
   }
 }
 
-.section-btn .btn:not(:last-child) {
-  margin-right: 8px;
+@media screen and (max-width: 767px) {
+  .section-btn .btn:nth-child(3) {
+    margin-right: 0;
+  }
 }
 
 .section-btn .btn:hover,
@@ -1118,8 +1153,15 @@ img {
 
 .portfolio {
   color: #212121;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio-subtitle {
@@ -1145,8 +1187,9 @@ img {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  height: 100%;
   margin: 0px;
-  padding: 63px 24px;
+  padding: 77px 24px;
   color: #FFFFFF;
   background: rgba(33, 150, 243, 0.9);
   font-weight: 400;
@@ -1219,6 +1262,12 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .portfolio-list .item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
 .portfolio-list .link-decoration:hover,
 .portfolio-list .link-decoration:focus {
   -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
@@ -1229,6 +1278,12 @@ img {
 .portfolio-list .link-decoration:hover,
 .portfolio-list .link-decoration:focus .portfolio-excerpt {
   opacity: 1;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-image {
+    width: 450px;
+  }
 }
 
 .portfolio-overlay {
@@ -1271,8 +1326,21 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
+  margin-top: 120px;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .modal {
+    margin-top: 208px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    margin-top: 221px;
+  }
 }
 
 .modal-icon {
