--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -2,19 +2,20 @@
   @extend %list;
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    margin-left: 81px;
+    margin-left: 79px;
   }
 
   @media screen and (min-width: 1200px) {
     display: flex;
     margin-left: 300px;
   }
-  .item {
-  }
 
   .item:not(:last-child) {
     @media screen and (max-width: 767px) {
       margin-bottom: 16px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-bottom: 10px;
     }
     @media screen and (min-width: 1200px) {
       margin-right: 30px;
