--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -1,16 +1,19 @@
 /* button */
 .section-btn {
   margin-bottom: 40px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
   text-align: left;
   @media screen and (min-width: 768px) {
     text-align: center;
   }
 
   .btn {
-    margin-right: 8px;
-    @media screen and (max-width: 767px) {
-      margin-bottom: 15px;
-    }
+    margin: 0;
     padding: 6px 22px;
     border: none;
     color: $title-text-color;
@@ -30,6 +33,18 @@
   .btn:not(:last-child) {
     margin-right: 8px;
   }
+  .btn {
+    &:nth-child(-n + 3) {
+      @media screen and (max-width: 767px) {
+        margin-bottom: 15px;
+      }
+    }
+    &:nth-child(3) {
+      @media screen and (max-width: 767px) {
+        margin-right: 0;
+      }
+    }
+  }
   .btn:hover,
   .btn:focus {
     color: $background-text-color;
@@ -39,8 +54,12 @@
 
 .portfolio {
   color: $title-text-color;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .portfolio-subtitle {
   margin-top: 0;
@@ -60,8 +79,10 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100%;
   margin: 0px;
-  padding: 63px 24px;
+  padding: 77px 24px;
+  // padding: 63px 24px;
   color: $background-text-color;
   background: rgba(33, 150, 243, 0.9);
   font-weight: 400;
@@ -115,6 +136,11 @@
       margin-right: 0;
     }
   }
+  .item:nth-last-child(-n + 3) {
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 0;
+    }
+  }
 
   .link-decoration:hover,
   .link-decoration:focus {
@@ -127,7 +153,11 @@
     opacity: 1;
   }
 }
-
+.portfolio-image {
+  @media screen and (max-width: 767px) {
+    width: 450px;
+  }
+}
 .portfolio-overlay {
   position: relative;
   overflow: hidden;
