--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,18 +1,29 @@
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
 
+    &.services-none {
+      padding-top: 0;
+    }
+  }
   .section-title {
     margin-top: 0;
     margin-bottom: 30px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
+
     color: $title-text-color;
     font-size: 28px;
     line-height: 1.18;
     text-align: center;
   }
-  @media screen and (max-width: 1199px) {
-    .section-title.title-hidden {
-      display: none;
-    }
-  }
+  // @media screen and (max-width: 1199px) {
+  //   .section-title.title-hidden {
+  //     display: none;
+  //   }
+  // }
 }
