--- a/css/main.css
+++ b/css/main.css
@@ -1205,6 +1205,18 @@ img {
   opacity: 0;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .portfolio-excerpt {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-excerpt {
+    padding: 63px 24px;
+  }
+}
+
 .portfolio-list .link-decoration:hover .portfolio-excerpt {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
