--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -82,7 +82,13 @@
   height: 100%;
   margin: 0px;
   padding: 77px 24px;
-  // padding: 63px 24px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding: 49px 24px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
+
   color: $background-text-color;
   background: rgba(33, 150, 243, 0.9);
   font-weight: 400;
