--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -29,15 +29,16 @@ img {
   background-color: $background-accent;
 }
 
+
 .container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  // @media screen and (min-width: 768px) and (max-width: 1199px) {
-  //   padding-bottom: 18px;
-  //   padding-top: 18px;
-  // }
+
+  @media screen and (max-width: 480px) {
+    width: 480px;
+  }
 
   @media screen and (min-width: 480px) {
     width: 480px;
