--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ img {
   padding-right: 15px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .container {
     width: 480px;
   }
@@ -93,6 +93,12 @@ img {
   min-height: 60px;
 }
 
+@media screen and (max-width: 767px) {
+  .heder {
+    position: relative;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .heder {
     min-height: 80px;
@@ -101,12 +107,6 @@ img {
 
 .heder.heder-portfolio {
   border: 1px solid #ececec;
-}
-
-@media screen and (max-width: 767px) {
-  .page-header {
-    position: relative;
-  }
 }
 
 .logo-black, .logo-white {
@@ -1017,7 +1017,7 @@ img {
 }
 
 .e-mail {
-  width: 450px;
+  max-width: 450px;
   height: 50px;
   margin-bottom: 20px;
   padding: 15px 16px;
@@ -1043,10 +1043,6 @@ img {
     margin-bottom: 0;
     margin-right: 12px;
   }
-}
-
-.background-footer {
-  background-color: #2F303A;
 }
 
 .button {
