забрала фіксовані висоти

--- a/css/main.css
+++ b/css/main.css
@@ -499,7 +499,7 @@ img {
 }
 
 .features .item {
-  width: 450px;
+  max-width: 450px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -629,7 +629,7 @@ img {
 }
 
 .team .item {
-  width: 450px;
+  max-width: 450px;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   background-color: #FFFFFF;
@@ -1240,7 +1240,7 @@ img {
 
 .portfolio-list .item {
   margin-bottom: 30px;
-  width: 450px;
+  max-width: 450px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
