--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -22,7 +22,7 @@
   }
 
   .item {
-    width: 450px;
+    max-width: 450px;
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: calc((100% - 30px) / 2);
     }
