--- a/sass/components/_portfolio-page.scss
+++ b/sass/components/_portfolio-page.scss
@@ -116,7 +116,7 @@
   .item {
     // @media screen and (max-width: 767px)
     margin-bottom: 30px;
-    width: 450px;
+    max-width: 450px;
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       width: calc((100% - 30px) / 2);
