--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -9,7 +9,7 @@
   }
 
   .item {
-    width: 450px;
+    max-width: 450px;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 1px 3px rgba(0, 0, 0, 0.12);
     background-color: $background-text-color;
