--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -130,7 +130,7 @@
   text-align: center;
 }
 .e-mail {
-  max-width: 450px;
+  width: 100%;
   height: 50px;
   @media screen and (min-width: 1200px) {
     width: 358px;
