--- a/css/main.css
+++ b/css/main.css
@@ -632,6 +632,7 @@ img {
   max-width: 450px;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
   background-color: #FFFFFF;
   text-align: center;
 }
@@ -1024,6 +1025,12 @@ img {
   font-size: 16px;
   line-height: 1.87;
   color: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .e-mail {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
