--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -132,6 +132,9 @@
 .e-mail {
   width: 100%;
   height: 50px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 450px;
+  }
   @media screen and (min-width: 1200px) {
     width: 358px;
   }
