--- a/sass/components/_heder.scss
+++ b/sass/components/_heder.scss
@@ -1,15 +1,20 @@
 .heder {
-  @media screen and (max-width: 767px) {
-    position: relative;
-  }
-  display: flex;
   align-items: center;
   background-color: $background-text-color;
   min-height: 60px;
+
+  @media screen and (max-width: 767px) {
+    position: relative;
+  }
+
   @media screen and (min-width: 768px) {
+    display: flex;
     min-height: 80px;
   }
   &.heder-portfolio {
     border: 1px solid #ececec;
   }
 }
+// .header-container {
+//   display: flex;
+// }
