--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -6,6 +6,7 @@
       display: flex;
       padding-top: 16px;
       padding-bottom: 16px;
+      align-items: center;
       justify-content: space-between;
     }
   }
