--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -34,6 +34,7 @@ img {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  min-height: inherit;
 
   @media screen and (min-width: 480px) {
     width: 480px;
